--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <a class="boton" href="/home/samuel/Escritorio/VSCODE/index.html">VS</a>
+        <a class="boton" href="https://s4mu3134.github.io/">VS</a>
     </header>
     <section></section>
     <footer></footer>
