--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>VS</title>
+    <title>SV</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
-        <a class="boton" href="https://s4mu3134.github.io/">VS</a>
+        <a class="but_ton" href="https://s4mu3134.github.io/">SV</a>
+        <h1 id="titulo"> Portafolio de presentación</h1>
     </header>
-    <section></section>
-    <footer></footer>
+    <section>
+        <a class="pr" href="proyectos.html">Proyectos</a>
+        <a class="es" href="estudios.html">Estudios</a>
+        <a class="qs" href="yo.html">¿Quién soy?</a>
+    </section>
+    <footer>
+        <h2>Contacto</h2>
+    </footer>
 </body>
 </html>
