--- a/estudios.html
+++ b/estudios.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trayectoria estudiantil</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    
+    <header> 
+        <a class="but_ton" href="https://s4mu3134.github.io/">SV</a>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
