--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SV</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -16,6 +17,7 @@
     </section>
     <footer>
         <h2>Contacto</h2>
+        <p>Copyrait 2022</p>
     </footer>
 </body>
 </html>
