--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SV</title>
+    <title>FRIENSIC</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
-        <a class="but_ton" href="https://s4mu3134.github.io/">SV</a>
-        <h1 id="titulo"> Portafolio de presentación</h1>
+        <a class="button" href="index.html"><img id="es" src= "grafics/es.png"></a>
+        <a class="bus" href="productos.html"><img id="bus" src= "grafics/buscar.png"></a>
+        <a class="car" href="car.html"><img id="cr" src= "grafics/carrito.png"></a>
+        <a class="login" href="log.html"><img id="log"src= "grafics/login.png"></a>
     </header>
     <section>
-        <a class="pr" href="proyectos.html">Proyectos</a>
-        <a class="es" href="estudios.html">Estudios</a>
-        <a class="qs" href="yo.html">¿Quién soy?</a>
+
     </section>
     <footer>
-        <h2>Contacto</h2>
-        <p>Copyrait 2022</p>
+
     </footer>
 </body>
 </html>
