--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <a class="button" href="index.html"><img id="es" src= "grafics/es.png"></a>
-        <a class="bus" href="productos.html"><img id="bus" src= "grafics/buscar.png"></a>
-        <a class="car" href="car.html"><img id="cr" src= "grafics/carrito.png"></a>
-        <a class="login" href="log.html"><img id="log"src= "grafics/login.png"></a>
+        <a class="button" href="https://s4mu3134.github.io/"><img id="es" src= "es.png"></a>
+        <a class="bus" href="productos.html"><img id="bus" src= "buscar.png"></a>
+        <a class="car" href="car.html"><img id="cr" src= "carrito.png"></a>
+        <a class="login" href="log.html"><img id="log"src= "login.png"></a>
     </header>
     <section>
 
